SBMVP-84 - WIP
* installed kendo chart module, RUN NPM INSTALL
* modified swagger to include BoardMember
* View for company info
