# src/app/slideout-routes/company-info/company-info.module.ts
@@ -1,13 +1,12 @@
-import { CommonModule } from "@angular/common";
 import { SlideoutModule } from "../../shared/slideout/slideout.module";
 import { CompanyInfoComponent } from "./company-info.component";
 import { CompanyInfoContainerComponent } from "./company-info.container.component";
-import { FlexLayoutModule } from "@angular/flex-layout";
-import { MaterialModule } from "../../shared/material/material.module";
 import { NgModule } from "@angular/core";
 import { RouterModule, Routes } from "@angular/router";
+import { BoardMemberComponent } from "./board-member/board-member.component";
+import { SharedModule } from "app/shared/shared.module";
 
-const COMPONENTS: any = [CompanyInfoContainerComponent, CompanyInfoComponent];
+const COMPONENTS: any = [BoardMemberComponent, CompanyInfoContainerComponent, CompanyInfoComponent];
 const COMPANY_INFO_ROUTES: Routes = [
     {
         path: "",
@@ -16,7 +15,7 @@ const COMPANY_INFO_ROUTES: Routes = [
     }
 ];
 @NgModule({
-    imports: [CommonModule, FlexLayoutModule, MaterialModule, RouterModule.forChild(COMPANY_INFO_ROUTES), SlideoutModule],
+    imports: [SharedModule, RouterModule.forChild(COMPANY_INFO_ROUTES), SlideoutModule],
     declarations: COMPONENTS,
     exports: COMPONENTS
 })
