# swagger/swagger.yaml
@@ -288,6 +288,24 @@ definitions:
       id:
         type: "string"
         description: "UUIDv4 used to track errors in logs especially when using PII data that's omitted from logs."
+  BoardMember:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
+      sinceDate:
+        type: "string"
+      company:
+        type: "string"
+      phone:
+        type: "string"
+      email:
+        type: "string"
+      avatar:
+        type: "string" 
   Company:
     type: "object"
     properties:
@@ -396,7 +414,7 @@ definitions:
       boardMembers:
         type: "array"
         items:
-          $ref: "#/definitions/Contact"
+          $ref: "#/definitions/BoardMember"
   CompanyInitiatives:
     type: array
     items:
